--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
     "@types/jest": "^25.0.0",
+    "@types/lodash": "^4.14.173",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-icons": "^3.0.0",
     "framer-motion": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
